# showyourwork

./: .condarc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  Snakefile  TODO.md  action.yml  config.yml  environment.yml  index.js  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  readthedocs.yml  ruff.toml  setup.cfg  setup.py  stamp.psd  towncrier.toml
.cortex/: check_git_status.py  cortex.py  functions.py  generate_sty.py  generate_tex.py  infer_figure_scripts.py  user_prompt.py
.cortex/data/: .gitignore
.cortex/styles/: aastex62.cls  xstring.tex
.cortex/templates/: cortex.sty.jinja  ms.tex.jinja
.cortex/tex/: aastex62.cls
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/resources/: env-3.10.yml  env-3.9.yml  env.yml
.github/workflows/: README.md  cache.py  changelog.yml  dispatch.yml  generate.py  generate.sh  integration.yml  local_integration_tests.yml  new.py  notify.yml  paper.yml  publish.yml  release.yml  release_minor.yml  remote.yml  remote_integration_tests.yml  showyourwork.yml  test-results.yml  test.yml  test_dispatch.yml  test_receive.yml  tests.yml  unit_tests.yml  update_template.sh  user.json
.showyourwork/: Snakefile  VERSION  functions.py  showyourwork.py
.showyourwork/data/: user-cache.json
.showyourwork/report/: workflow.rst
.showyourwork/rules/: arxiv.smk  auxfiles.smk  config.smk  constants.smk  errors.smk  figure.smk  pdf.smk  tree.smk
.showyourwork/scripts/: arxiv.py  stylesheet.py
.showyourwork/showyourwork-action/: README.md  action.yml  cache.py  index.js  package-lock.json  package.json
.showyourwork/templates/: showyourwork.sty.jinja
.showyourwork/tex/: aastex62.cls
cookiecutter-showyourwork/: cookiecutter.json
cookiecutter-showyourwork/hooks/: post_gen_project.py
cookiecutter-showyourwork/{{ cookiecutter.repo }}/: LICENSE  README.md  Snakefile  environment.yml
docs/: .gitignore  README.md  Snakefile.rst  action.rst  api.rst  attribution.rst  changelog.rst  cli.rst  conf.py  config.rst  contributorguide.rst  custom.rst  dev_version_banner.rst  environment.yml  faqs.rst  figures.rst  get_repos.py  hacks.py  index.rst  install.rst  integration_tests.rst  intro.rst  known_issues.rst  latex.rst  layout.rst  local.rst  logging.rst  migrating.rst  overleaf.rst  projects.json  projects.rst  projects.rst.jinja  pull_requests.rst  quickbuild.rst  quickstart.rst  reproducibility.rst  requirements.txt  rules.rst  snakefile.rst  templates.rst  (+3 more)
docs/changes/: 556.optimization.rst  557.maintenance.rst  562.bugfix.rst  573.feature.rst  575.bugfix.rst  576.bugfix.rst  580.maintenance.rst  581.documentation.rst  606.bugfix.rst  610.bugfix.rst  616.feature.rst  617.bugfix.rst  631.documentation.rst  633.maintenance.rst  635.bugfix.rst  637.feature.rst  639.feature.rst  641.bugfix.rst  649.bugfix.rst  654.maintenance.rst  656.bugfix.rst  658.bugfix.rst  662.documentation.rst  665.bugfix.rst  669.documentation.rst  670.feature.rst  672.bugfix.rst  680.bugfix.rst  682.bugfix.rst  697.bugfix.rst  (+11 more)
figures/: dag.py  fibonacci.py  fractal.py  fractals.py  heart.py  inline.py  koch.py  matplotlibrc  placeholder.py
rules/: meta.smk  repo.smk  tree.smk
scripts/: arxiv.py  figure.py
showyourwork/: __init__.py  __main__.py  cache.py  clean.py  config.py  constants.py  dag.py  entry_points.py  exceptions.py  git.py  gitapi.py  inspect_stack.py  logging.py  merge.py  meta.py  new.py  overleaf.py  overleaf2.py  patches.py  paths.py  settings.py  subproc.py  tex.py  userrules.py  utils.py  zenodo.py
showyourwork-action/: LICENSE  README.md  README.rst  action.yml  index.js  package-lock.json  package.json
showyourwork-template/: README.md  cookiecutter.json  environment.yml
showyourwork-workflow/: Snakefile
src/: .gitignore  bib.bib  ms.tex
tests/: conftest.py  test_cache.py  test_cache_optim.py  test_config.py  test_default.py  test_dependencies.py  test_duplicate_graphics.py  test_euler.py  test_fallback.py  test_latex.py  test_orcid_id.py  test_overleaf.py  test_parse_syw_spec.py  test_pr.py  test_render.py  test_repo.py  test_rule_order.py  test_setup.py  test_variable.py  test_zenodo.py
tex/: bib.bib  ms.tex  style.tex
workflow/: .gitignore  Snakefile  build.smk  preprocess.smk  setup.smk
workflow-build/: Snakefile
workflow-setup/: Snakefile
(+544 files in other folders)
