[build-system]
requires = ["setuptools>=45.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "showyourwork/_showyourwork_version.py"
write_to_template = '__version__ = "{version}"'

[tool.black]
line-length = 79

[tool.isort]
skip_glob = []
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["showyourwork"]

[tool.pytest.ini_options]
addopts = "-v --asyncio-task-timeout=1800"
norecursedirs = "tests/helpers"
