[project]
name = "showyourwork"
description = "A workflow for open-source scientific articles"
authors = [
    { name = "Rodrigo Luger", email = "rodluger@gmail.com" },
    { name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "graphviz>=0.19.1",
    "jinja2>=3.0.3",
    "pyyaml>=6.0",
    "requests>=2.25.1",
    "click>=8.1.3",
    "cookiecutter>=2.1.1",
    "packaging>=21.3",
    "snakemake==7.15.2",
]

[project.scripts]
showyourwork = "showyourwork.cli:entry_point"

[project.urls]
"Homepage" = "https://show-your.work"
"Source" = "https://github.com/showyourwork/showyourwork"
"Bug Tracker" = "https://github.com/showyourwork/showyourwork/issues"

[project.optional-dependencies]
tests = ["pytest>=7.0.0", "pytest-asyncio-cooperative>=0.28.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "showyourwork/_showyourwork_version.py"

[tool.black]
target-version = ["py38", "py39"]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLR", "PLW", "UP"]
ignore = [
    "B904",    # Don't require explicit raise ... from in expections for now
    "F821",    # Allow undefined names (for now!) to handle MAGIC snakemake
    "PLR0912", # Allow more branches
    "PLR0913", # Allow more function arguments
    "PLR0915", # Allow more statements
    "PLR2004", # Allow magic numbers in comparisons
]
exclude = []

[tool.ruff.isort]
known-first-party = ["showyourwork"]
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "-v --asyncio-task-timeout=1800"
norecursedirs = "tests/helpers"
