[project]
name = "showyourwork"
description = "A workflow for open-source scientific articles"
authors = [
    { name = "Rodrigo Luger", email = "rodluger@gmail.com" },
    { name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" },
    { name = "Michele Peresano", email = "peresano.michele@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "graphviz",
    "jinja2",
    "pyyaml",
    "requests",
    "click",
    "cookiecutter",
    "packaging",
    "snakemake",
    "pulp",
]

[project.scripts]
showyourwork = "showyourwork.cli:entry_point"

[project.urls]
"Homepage" = "https://show-your.work"
"Source" = "https://github.com/showyourwork/showyourwork"
"Bug Tracker" = "https://github.com/showyourwork/showyourwork/issues"

[project.optional-dependencies]
tests = ["pytest>=7.0.0", "pytest-asyncio-cooperative>=0.28.0"]
docs = [
    "datrie",
    "sphinx-book-theme",
    "sphinxcontrib-programoutput",
    "sphinx-changelog",
    "towncrier",
]
dev = ["showyourwork[tests]", "showyourwork[docs]", "ruff", "pre-commit"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/showyourwork/_showyourwork_version.py"

[tool.pytest.ini_options]
addopts = "-v --asyncio-task-timeout=1800"
norecursedirs = "tests/helpers"
